# bayesian-aggregation-for-swarm-reinforcement-learning

./: .gitignore  README.md  pyproject.toml  run-simul.sh  run-slurm.sh  tuneloop.sh
kb_learning/: README.md
params/: 2021-05-02-pursuit-bayes-singlespace.json  2021-05-02-pursuit-bayes.json  2021-05-02-pursuit-mean.json  2021-05-09-pursuit-bayes-hyperopt-t6-singlespace.json  2021-05-09-pursuit-bayes-hyperopt-t6.json  2021-06-30-pursuit-mean-opt-trl.json  2021-07-11-pursuit-max-meanopt-ppo.json  2021-07-rendez-repro.json  leakyrelu.json
playground/: EvalCallback.py  FlattenVecWrapper.py  KilobotsEnvWrapper.py  PettingZooEnvWrapper.py  default_params.py  fast_dict_space.py  inference.py  logging_util.py  move_uninteresting_runs.py  params.py  plot.py  plot_reproduce.py  plot_verify.py  serde.py  sumtype.py  train.py  tune.py  util.py
plots/: 2021-07-05_12.29.27-singlepursuit (by train algo and agg method).json  2021-07-05_12.59.45-pursuit (by train algo and agg method).json  2021-07-07_15.07.38-assembly (by agg method).json  2021-07-10_13.30.06-Multi-Evader Pursuit (smallarch).json  2021-07-10_16.06.20-Multi-Evader Pursuit (hpsopt).json  2021-07-10_16.07.12-Multi-Evader Pursuit (hpsopt top.33).json  2021-07-10_16.28.31-singlepursuit (by train algo and agg method).json  2021-07-10_18.56.32-Clustering task (2 clusters, by agg method).json  2021-07-11_11.57.49-Multi-Evader Pursuit TRL.json  2021-07-11_12.27.17-Pursuit (bayes outputvariance).json  2021-07-11_13.01.31-Multi-Evader Pursuit Max.json  2021-07-11_13.13.37-assembly (by train algo and agg method).json  (+29 more)
(+2231 files in other folders)
